[package]
name = "binlog_syncer"
version = "0.1.0"
authors = ["Tomoki Ninomiya <t.miliya612@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "mysql", "chrono", "macros" ] }
dotenv = "0.15.0"
chrono = "0.4"
